Limpieza para el Proyecto Final